# AoC2019

./: CMakeLists.txt  InputIO.h
day00/: d0cairo1.cpp
day01/: d1p1.cpp  d1p2.cpp
day02/: d2p1.cpp  d2p2.cpp  program.cpp  program.h
day03/: d3p1.cpp
day04/: d4p1.cpp
day08/: d8p1.cpp
modules/: FindCairo.cmake
